# homm3tools

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build_and_debug_browser.sh  run_tests.sh  run_tests_emscripten.sh  test.html
.github/workflows/: build.yml
cmake/modules/: release.cmake
data/: CMakeLists.txt
data/images/: CMakeLists.txt
data/images/creatures/: CMakeLists.txt
data/images/creatures/portraits/: CMakeLists.txt  urls.txt
src/app/: CMakeLists.txt
src/app/h3decompress/: CMakeLists.txt  main.cpp
src/app/h3handicap/: CMakeLists.txt  handicap.cpp
src/app/h3viewer/: CMakeLists.txt  draw_plots.cpp  draw_plots.h  kingdom_army_strength.cpp  kingdom_army_strength.h  main.mm  main_metal.mm  main_opengl3.cpp  player.cpp  player.h  savefile_series.cpp  savefile_series.h  thieves_guild.cpp  thieves_guild.h
src/app/h3viewer/plots/: artifacts.cpp  artifacts.h  best_creature.cpp  best_creature.h  experience.cpp  experience.h  gold.cpp  gold.h  hero_count.cpp  hero_count.h  kingdom_army_strength.cpp  kingdom_army_strength.h  plot.cpp  plot.h  resources.cpp  resources.h  town_count.cpp  town_count.h
src/app/homm3decompress/: CMakeLists.txt
src/app/homm3viewer/: CMakeLists.txt  kingdom_army_strength.cpp  kingdom_army_strength.h  main.cpp  main.mm  savefile_series.h  thieves_guild.cpp
src/h3/: CMakeLists.txt  artifacts.cpp  artifacts.h  creatures.cpp  creatures.h  difficulty.cpp  difficulty.h  hero.cpp  hero.h  packed_structs.h  player.cpp  player.h  savefile.cpp  savefile.h  secondary_skills.cpp  secondary_skills.h  spells.cpp  spells.h  stats.cpp  stats.h  town.cpp  town.h  value_reader.cpp  value_reader.h
src/lib/: CMakeLists.txt
src/lib/h3handicap/: CMakeLists.txt  handicap.cpp  handicap.h
src/lib/h3plots/: CMakeLists.txt  player.cpp  player.h  plots.cpp  plots.h  savefile_series.cpp  savefile_series.h  settings.h
src/lib/h3plots/plots/: artifacts.cpp  artifacts.h  best_creature.cpp  best_creature.h  experience.cpp  experience.h  gold.cpp  gold.h  hero_count.cpp  hero_count.h  kingdom_army_strength.cpp  kingdom_army_strength.h  plot.cpp  plot.h  resources.cpp  resources.h  town_count.cpp  town_count.h
src/lib/h3plots_json/: CMakeLists.txt  json_interface.cpp  json_interface.h
tests/: CMakeLists.txt  test-artifacts.cpp  test-creatures.cpp  test-handicap.cpp  test-hero-experience.cpp  test-hero-movement-gigantic.cpp  test-hero-movement.cpp  test-hero-player.cpp  test-hero-town.cpp  test-kingdom-army-strength.cpp  test-primary-skills.cpp  test-prison.cpp  test-resources.cpp  test-savefile.cpp  test-spell-points.cpp  test-spells.cpp  test-town-names.cpp  test-towns.cpp  test_data.h.in
tests/h3/: CMakeLists.txt  test-hero-movement-gigantic.cpp  test-kingdom-army-strength.cpp  test-savefile.cpp  test-secondary-skills.cpp  test-towns.cpp
tests/h3plots/: CMakeLists.txt  test-json-and-cpp-plots-equal.cpp
tests/test_data/artifacts/: SaveGameTester_Artifacts.h3m  [hotseat] 111.GM8  [hotseat] 112.GM8  [hotseat] 113.GM8  [hotseat] 114.GM8  info.txt
tests/test_data/creatures/: [hotseat] 111.GM8  [hotseat] 112.GM8  info.txt
tests/test_data/experience/: SaveGameTester_Experience.h3m  [hotseat] 111.GM2  [hotseat] 112.GM2  [hotseat] 113.GM2  [hotseat] 114.GM2  [hotseat] 115.GM2  [hotseat] 116.GM2  [hotseat] 117.GM2  [hotseat] 121.GM2  info.txt
tests/test_data/hero_player/: SaveGameTester_Hero_Players_01.h3m  SaveGameTester_Hero_Players_02.h3m  [hotseat] 111.01.GM8  [hotseat] 111.02.GM8  info.txt
tests/test_data/hero_town/: SaveGameTester_Hero_Town.h3m  [hotseat] 111.GM3  [hotseat] 112.GM3  [hotseat] 113.GM3  [hotseat] 114.GM3  info.txt
tests/test_data/kingdom_army_strength/: SaveGameTester_KingdomArmyStr.h3m  [hotseat] 111.GM3  [hotseat] 112.GM3  [hotseat] 113.GM3  [hotseat] 114.GM3  [hotseat] 115.GM3  info.txt
tests/test_data/movement/: [hotseat] 111.GM2  [hotseat] 112.GM2  [hotseat] 113.GM2  [hotseat] 114.GM2  [hotseat] 115.GM2  [hotseat] 116.GM2  [hotseat] 117.GM2  info.txt  start.GM2
tests/test_data/movement_gigantic/: [hotseat] 111.GM2  [hotseat] 112.GM2  [hotseat] 113.GM2  [hotseat] 114.GM2  [hotseat] 115.GM2  [hotseat] 116.GM2  [hotseat] 117.GM2  info.txt  start.GM2
tests/test_data/primary_skills/: [hotseat] 111.GM2  [hotseat] 112.GM2  info.txt
tests/test_data/prison/: SaveGameTester_Prison.h3m  [hotseat] 111.GM2  [hotseat] 112.GM2  info.txt
tests/test_data/resources/: [hotseat] 111.GM8  [hotseat] 112.GM8  [hotseat] 113.GM8  info.txt
tests/test_data/savefile/M/: SaveGameTester_Map_M.h3m  [hotseat] 111.GM2  info.txt
tests/test_data/savefile/M_U/: SaveGameTester_Map_M_U.h3m  [hotseat] 111.GM2  info.txt
tests/test_data/savefile/S/: SaveGameTester_Map_S.h3m  [hotseat] 111.GM2  info.txt
tests/test_data/savefile/S_U/: SaveGameTester_Map_S_U.h3m  [hotseat] 111.GM2  info.txt
tests/test_data/secondary_skills/: SaveGameTester_SecondarySkills.h3m  [hotseat] 111.GM5  [hotseat] 112.GM5  [hotseat] 113.GM5  info.txt
tests/test_data/spell_points/: [hotseat] 111.GM2  [hotseat] 112.GM2  info.txt
tests/test_data/spells/: SaveGameTester_Spells.h3m  [hotseat] 111.GM3  [hotseat] 112.GM3  info.txt
tests/test_data/town_names/01/: SaveGameTester_TownNames01.h3m  [hotseat] 111.GM3  info.txt
tests/test_data/town_names/02/: SaveGameTester_TownNames02.h3m  [hotseat] 111.GM3  info.txt
tests/test_data/town_names/03/: SaveGameTester_TownNames03.h3m  [hotseat] 111.GM2  info.txt
tests/test_data/town_names/04/: SaveGameTester_TownNames04.h3m  [hotseat] 111.GM2  info.txt
tests/test_data/towns/: SaveGameTester_Towns.h3m  [hotseat] 111.GM2  [hotseat] 112.GM2  [hotseat] 113.GM2  [hotseat] 114.GM2  [hotseat] 115.GM2  info.txt
